services/api-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-serv
  labels:
    app: db-serv
spec:
  selector:
    app: TP-meteo
    type: db
    component: influxdb
  ports:
    - name: db-port
      protocol: TCP
      port: 8086
      targetPort: 8086
